Example how execute our code with sonar an solution de issues reported to improve the code